@@ -194,7 +194,8 @@ Trunk (unreleased changes)
    HBASE-42    Set region split size on table creation (Andrew Purtell via Stack)
    HBASE-43    Add a read-only attribute to columns (Andrew Purtell via Stack)
    HBASE-424   Should be able to enable/disable .META. table
-
+   HBASE-679   Regionserver addresses are still not right in the new tables page
+   
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
    HBASE-596   DemoClient.py (Ivan Begtin via Stack)
